# FederatedSkill

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
configs/: 1_se_qwen.local.yaml  2_fed_3glm_cc.local.yaml  3_fed_hetero_cc.local.yaml  4_fed_hetero_mixed_cli.local.yaml
scripts/: _common.sh  run_1_se.sh  run_2_fed_3glm_cc.sh  run_3_fed_hetero_cc.sh  run_4_fed_hetero_mixed_cli.sh
skillfl/: __init__.py  harbor_runner.py
skillfl/skillflow_adapter/: __init__.py  _single_trial.py  cli.py  config.py  harbor_bridge.py  llm_client.py  merge.py  partitioning.py  patcher_bridge.py  runner.py  sync_schedule.py  worker_trial.py
skillfl/skillflow_adapter/merge_skill/: SKILL.md
skillfl/skillflow_adapter/merge_skill/scripts/: apply_full_patch.sh  compare_patch_to_library.sh  compare_skill_descriptions.sh  find_near_dup_skills.py  peer_consensus.py  revert_to_baseline.sh  summarize_patches.sh  validate_library.sh  validate_skill_md.py
skillfl/skillflow_adapter/task_update_skill/: SKILL.md
